# schema_creation_agent

./: .env.example  .gitignore  Autograph - Agentic Graph Schema.md  pyproject.toml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  DataSourceGrid.tsx  DeployModal.tsx  OutcomesPanel.tsx  SchemaGraph.tsx  SchemaPreview.tsx  Sidebar.tsx  StarterQueriesPanel.tsx  UseCaseGrid.tsx
frontend/lib/: api.ts  types.ts
patterns/: customer_360.yaml  cybersecurity.yaml  entity_resolution.yaml  fraud.yaml  knowledge_graph.yaml  recommendation.yaml  supply_chain.yaml
rules/: deterministic.yaml
samples/customer_360_demo/: README.md  customers.csv  marketing_pixels.csv  orders.csv  products.csv  server_logs.csv  support_tickets.csv  web_sessions.csv
samples/cybersecurity_demo/: README.md  alerts.csv  assets.csv  domains.csv  firewall_config.csv  ip_addresses.csv  network_flows.csv  processes.csv  timezones.csv  users.csv
samples/entity_resolution_demo/: README.md  addresses.csv  billing_records.csv  country_codes_lookup.csv  crm_records.csv  data_dictionary.csv  emails.csv  phones.csv  support_records.csv
samples/knowledge_graph_demo/: README.md  build_logs.csv  chunk_concepts.csv  chunks.csv  concepts.csv  documents.csv  entities.csv  font_cache.csv  mentions.csv
samples/multi_csv_demo/: README.md  accounts.csv  customers.csv  devices.csv  internal_audit_log.csv  marketing_campaigns.csv  merchants.csv  schema.json  (+1 more)
tests/: test_emitter_regression.py
(+42 files in other folders)
