[project]
name = "tg-schema-agent"
version = "0.1.0"
description = "TigerGraph Schema Creation Agent — deterministic core"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-snapshot>=0.9",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
]
tigergraph = [
    "tigergraph-mcp>=1.0.1",
    "mcp>=1.0.0",
    "python-dotenv>=1.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]
llm = [
    "google-genai>=0.7",
]

[project.scripts]
tg-schema = "tg_schema_agent.cli:app"
tg-schema-server = "tg_schema_agent.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_schema_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "faker>=40.21.0",
]
